<resources>
    <string name="app_name">My Application2</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="see_comments">See Comments</string>
    <string name="textview">TextView</string>
    <string name="todo1">TODO</string>
    <string name="button1">Button</string>
    <string name="comment_area_1">Comment Area 1</string>
    <string name="location">location</string>
    <string name="comment_area_2">Comment Area 2</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="search_for">Search For...</string>
    <string name="northern_cafeteria">Northern Cafeteria</string>
    <string name="submit_your_comment">Submit your comment</string>
    <string name="no_1">No.1</string>
</resources>